@@ -1,3 +1,10 @@
+2001-07-18  Robert Graham Merkel  <rgmerk@mira.net>
+
+	* src/scm/report/payables.scm: Make creditor display
+	order configurable.
+
+	* src/guile/gnc.gwp: wrap safe_strcmp.
+
 2001-07-17  Dave Peticolas  <dave@krondo.com>
 
 	* doc/sgml/C/xacc-features.sgml: Matt Krai's doc patch
